--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html>
 <head>
     <title>Streak Counter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="manifest" href="manifest.json">
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             background-color: #f3f4f6;
             color: #333;
-            padding-top: 50px;
+            margin: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
         }
         .streak-counter {
             background-color: #4caf50;
@@ -16,13 +22,15 @@
             border-radius: 8px;
             padding: 20px;
             display: inline-block;
+            width: 90%;
+            max-width: 400px;
         }
         .streak-number {
-            font-size: 40px;
+            font-size: 3em; /* Responsive font size */
             font-weight: bold;
         }
         .streak-text {
-            font-size: 20px;
+            font-size: 1.5em;
         }
     </style>
 </head>
@@ -30,12 +38,12 @@
     <div class="streak-counter">
         <div class="streak-text">Eliza has a</div>
         <div id="streakNumber" class="streak-number"></div>
-        <div class="streak-text">Day Streak!</div>
+        <div class="streak-text">Day Streak Since Dec 25, 2023</div>
     </div>
 
     <script>
         function calculateStreak() {
-            var startDate = new Date('2023-01-01');
+            var startDate = new Date('2023-12-25');
             var currentDate = new Date();
             var timeDiff = currentDate - startDate;
             var daysDiff = Math.floor(timeDiff / (1000 * 3600 * 24));
@@ -43,7 +51,10 @@
         }
 
         document.getElementById('streakNumber').innerText = calculateStreak();
+        if ('serviceWorker' in navigator) {
+            navigator.serviceWorker.register('service-worker.js')
+            .then(function() { console.log('Service Worker Registered'); });
+        }
     </script>
 </body>
 </html>
-
